cmps112/asg4/test1/make.bad.log
cc bad.c -o bad
bad.c:3:1: error: unknown type name ‘This’
 This is a bad file.
 ^
bad.c:3:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘a’
 This is a bad file.
         ^
bad.c:3:9: error: unknown type name ‘a’
bad.c:4:7: warning: missing terminating ' character
 cc won't compile it.
       ^
bad.c:4:1: error: missing terminating ' character
 cc won't compile it.
 ^
make: *** [bad] Error 1
